# monpoc

./: README.md  data.py  data_to_csv.py  requirements.txt  setup.cfg  tox.ini  update_csvs.sh  update_game_data.sh
csv/: abilities.csv  buildings.csv  monsters.csv  units.csv  update.sh
monpoc/: __init__.py  csv_generator.py  game_data.py
tests/: test_model.py
