[metadata]
name = monpoc
author = Moisés Guimarães
author-email = guimaraes@pm.me
summary = Monsterpocalypse Analyzer
description-file =
    README.rst
home-page = https://moisesguimaraes.github.io/monpoc
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3

[files]
packages = monpoc

[global]
setup-hooks =
    pbr.hooks.setup_hook

[flake8]
max-line-length = 90

[bdist_wheel]
universal = 1
