[metadata]
name = monpoc
summary = Monsterpocalypse Analyzer
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
author = Moisés Guimarães de Medeiros
author-email = guimaraes@pm.me
home-page = https://moisesguimaraes.github.io/monpoc
license = Apache-2.0
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[entry_points]
console_scripts =
    monpoc-csv-generator = monpoc.csv_generator:main

[bdist_wheel]
universal = 1
